KFSPTS-19212 Start of changes for 06/25/2020 patch upgrade